Compiles on Linux/GCC 32/64-bit now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,9 +140,10 @@ ExternalProject_Add(
         STEP_TARGETS build
         CMAKE_GENERATOR ${CMAKE_GENERATOR}
         CMAKE_ARGS
-        -DCMAKE_INSTALL_PREFIX=${PLIBSYS_BIN_ROOT}
-        -DPLIBSYS_BUILD_DOC=${BUILD_DOCUMENTATION}
-        -DPLIBSYS_TESTS=${BUILD_TESTING}
+			-DCMAKE_INSTALL_PREFIX=${PLIBSYS_BIN_ROOT}
+			-DPLIBSYS_BUILD_DOC=${BUILD_DOCUMENTATION}
+			-DPLIBSYS_TESTS=${BUILD_TESTING}
+			-DCMAKE_C_FLAGS="-fPIC"
 )
 include_directories(${PLIBSYS_SRC_ROOT}/src)
 include_directories(${PLIBSYS_BIN_ROOT})
