--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /.idea
 build
 /kdev4
-/thirdparty/mqtt-paho-c
-/thirdparty/plibsys
-/lib/es
+/cSource/thirdparty/mqtt-paho-c
+/cSource/thirdparty/plibsys
+/cSource/lib/es
 
