--- a/cSource/src/os/windows/vastpaho.def.in
+++ b/cSource/src/os/windows/vastpaho.def.in
@@ -1,5 +1,5 @@
 LIBRARY	@VAST_PAHO_LIBNAME@
 EXPORTS
     MqttVastRegisterCallback
-	MqttVastCheckpoint
-
+    MqttVastCheckpoint
+    MqttVastVersionString
