Fixups for comments/function names/type issues

--- a/c/source/os/windows/vast_paho_sync_callbacks.def.in
+++ b/c/source/os/windows/vast_paho_sync_callbacks.def.in
@@ -1,5 +1,5 @@
 LIBRARY	@VAST_PAHO_SYNC_CB_LIBNAME@
 EXPORTS
-    MqttVastRegisterCallback
-    MqttVastCheckpoint
-    MqttVastVersionString
+    EsMqttVastRegisterCallback
+    EsMqttVastCheckpoint
+    EsMqttVastVersionString
