Fix ARM cmake instructions for finding Smalltalk VM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -322,10 +322,10 @@ set(ES_INCLUDES ${ES_C_INC_SRC_DIR}/es CACHE PATH "ES: Includes")
 if (CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm.*|ARM.*)")
     if (ES_64BIT)
         set(ES_LIB_SUBFOLDER arm64)
-        set(ES_LIB_DEFAULT_INSTALL_LOCATION "C:/Program Files/Instantiations/VA Smalltalk/9.2x64/bin")
+        set(ES_LIB_DEFAULT_INSTALL_LOCATION "/usr/local/VASmalltalk/9.2x64/bin")
     else ()
         set(ES_LIB_SUBFOLDER arm)
-        set(ES_LIB_DEFAULT_INSTALL_LOCATION "C:/Program Files (x86)/Instantiations/VA Smalltalk/9.2x86")
+        set(ES_LIB_DEFAULT_INSTALL_LOCATION "/usr/local/VASmalltalk/9.2x86/bin")
     endif ()
 elseif (ES_64BIT)
     set(ES_LIB_SUBFOLDER x86_64)
